--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
 HOLA MUNDO FI
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Efecto Peltier</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1 {
+            color: #0056b3;
+        }
+        section {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+    </style>
+</head>
+<body>
+    <section>
+        <h1>Efecto Peltier</h1>
+        <p>
+            El efecto Peltier es un fenómeno termoelectricidad que ocurre cuando una corriente eléctrica pasa a través de dos conductores diferentes. Este efecto provoca que se transfiera calor desde uno de los conductores al otro, resultando en un lado que se enfría y otro que se calienta.
+        </p>
+        <h2>Aplicaciones</h2>
+        <p>
+            El efecto Peltier se utiliza en diversas aplicaciones, como en sistemas de refrigeración, módulos de enfriamiento y en algunas tecnologías de calefacción. Es especialmente útil en situaciones donde se requiere un control preciso de la temperatura.
+        </p>
+        <h2>Principio de Funcionamiento</h2>
+        <p>
+            Cuando se aplica una corriente a través de un material semiconductor que está unido a otro tipo de material, los electrones y huecos se mueven de un lado a otro, absorbiendo o liberando calor en el proceso. Este efecto puede ser invertido, es decir, si se aplica calor a un lado, se puede generar una corriente eléctrica.
+        </p>
+    </section>
+</body>
+</html>
